# ProiectPCD

./: .gitignore  CMakeLists.txt  README.md  admin.c  build_util.sh  car.c  car.h  client  client.c  client.py  request.html  server  server.c  web.h
SendFile/: fileclient.c  fileserver.c
car_detection/: DetectCars.py
config/: cfg.h
python/: DetectCars.py  client.py
simulation/: car1.xml  car10.xml  car2.xml  car3.xml  car4.xml  car5.xml  car6.xml  car7.xml  car8.xml  car9.xml
test_data/intrinsics/: AS8JDM9DEOD8.xml
